--- a/WebApplicationFrontend/src/app/app.component.html
+++ b/WebApplicationFrontend/src/app/app.component.html
@@ -1,7 +1,18 @@
-<html>
-    <head>
-    </head>
-    <body>
-        <router-outlet></router-outlet>
-    </body>
-</html>
+<div>
+    <button mat-raised-button routerLink="/feedback">Approved Feedback</button>
+    <button mat-raised-button routerLink="/allFeedback">All feedback</button>
+    <button mat-raised-button routerLink="/prescriptionSearch">Prescription search</button>
+    <button mat-raised-button routerLink="/reportSearch">Report search</button>
+    <button mat-raised-button routerLink="/createFeedback">Create feedback</button>
+    <button mat-raised-button routerLink="/survey">Survey</button>
+    <button mat-raised-button routerLink="/patientRegistration">Patient registration</button>
+    <button mat-raised-button routerLink="/medicalRecord">Medical record</button>
+    <button mat-raised-button routerLink="/prescriptionSimpleSearch">Prescription simple search</button>
+    <button mat-raised-button routerLink="/reportSimpleSearch">Report simple search</button>
+    <button mat-raised-button routerLink="/blockMaliciousUsers">Block </button>
+    <button mat-raised-button routerLink="/observeAppointment">Observe </button>
+    <button mat-raised-button routerLink="/scheduleAppointment">Schedule appointment</button>
+    <button mat-raised-button routerLink="/appointmentRecommendation">Appointment recommendaion</button>  
+    
+</div>
+    <router-outlet></router-outlet>
