--- a/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.html
+++ b/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.html
@@ -1,21 +1,26 @@
 <div class="container">
-    <div class="row" *ngFor="let feedback of approvedFeedback">
+    <div class="row" *ngFor="let feedback of approvedFeedback" class="container center-card">
                     <mat-card>
+                        <mat-card-header>
                         <mat-card-title>
                             <p class="title-paragraph" *ngIf="feedback.anonymous">Anonymous</p>
                             <p class="title-paragraph" *ngIf="!feedback.anonymous"> {{ feedback.name }} {{ feedback.surname }}</p>
                         </mat-card-title>
-                        <mat-divider></mat-divider>
+
+                        <mat-card-subtitle>
+                            <p class="subtitle-paragraph">{{ feedback.date | date: 'dd/MM/yyyy'}}</p>
+                        </mat-card-subtitle>
+
+                        </mat-card-header>
+                        
                         <mat-card-content>
                           
                             <div class="limit">
                                 <p class="content-paragraph">{{ feedback.additionalNotes }}</p>
                             </div>
                         </mat-card-content>
-                        <mat-divider></mat-divider>
-                        <mat-card-footer>
-                            <p class="date-paragraph">{{ feedback.date | date: 'dd/MM/yyyy'}}</p>
-                        </mat-card-footer>
+                        
+                       
                     </mat-card>
                 
                     
