--- a/WebApplicationFrontend/src/app/registration/patient-registration/patient-registration.component.html
+++ b/WebApplicationFrontend/src/app/registration/patient-registration/patient-registration.component.html
@@ -32,7 +32,7 @@
                         <mat-label>Id*</mat-label>
                         <input matInput id="id" placeholder="Id" formControlName="id">
                         <mat-error *ngIf="!createForm.get('id').valid && createForm.get('id').touched && createForm.get('id').errors['required']">Please enter id</mat-error>
-                        <mat-error *ngIf="!createForm.get('id').valid && createForm.get('id').touched && createForm.get('id').errors['pattern']">Please correct id</mat-error>
+                        <mat-error *ngIf="!createForm.get('id').valid && createForm.get('id').touched && createForm.get('id').errors['pattern']">Please enter correct id</mat-error>
                     </mat-form-field>
                 </div>
 
@@ -53,7 +53,7 @@
                     <mat-form-field>
                         <mat-label>Phone*</mat-label>
                         <input matInput type="tel" id="phone" placeholder="Phone" formControlName="phone">
-                        <mat-error *ngIf="!createForm.get('phone').valid && createForm.get('phone').touched && createForm.get('phone').errors['required']">Please phone number</mat-error>
+                        <mat-error *ngIf="!createForm.get('phone').valid && createForm.get('phone').touched && createForm.get('phone').errors['required']">Please enter phone number</mat-error>
                     </mat-form-field>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                         <mat-label>Username*</mat-label>
                         <input matInput id="username" placeholder="Username" formControlName="username">
                         <mat-error *ngIf="!createForm.get('username').valid && createForm.get('username').touched && createForm.get('username').errors['required']">Please enter username</mat-error>
-                        <mat-error *ngIf="!createForm.get('username').valid && createForm.get('username').touched && createForm.get('username').errors['minlength']">At least 5 characters</mat-error>
+                        <mat-error *ngIf="!createForm.get('username').valid && createForm.get('username').touched && createForm.get('username').errors['minlength']">Username must be at least 5 characters</mat-error>
                     </mat-form-field>
                 </div>
 
@@ -91,7 +91,7 @@
                         <mat-label>Password*</mat-label>
                         <input matInput type="password" id="password" placeholder="Password" formControlName="password">
                         <mat-error *ngIf="!createForm.get('password').valid && createForm.get('password').touched && createForm.get('password').errors['required']">Please enter password</mat-error>
-                        <mat-error *ngIf="!createForm.get('password').valid && createForm.get('password').touched && createForm.get('password').errors['minlength']">At least 8 characters</mat-error>
+                        <mat-error *ngIf="!createForm.get('password').valid && createForm.get('password').touched && createForm.get('password').errors['minlength']">Password must be at least 8 characters</mat-error>
                     </mat-form-field>
                 </div>
 
@@ -100,7 +100,7 @@
                         <mat-label>Confirm password*</mat-label>
                         <input matInput type="password" id="confirmPassword" placeholder="Confirm password" formControlName="confirmPassword">
                         <mat-error *ngIf="!createForm.get('confirmPassword').valid && createForm.get('confirmPassword').touched && createForm.get('confirmPassword').errors['required']">Please enter password</mat-error>
-                        <mat-error *ngIf="!createForm.get('confirmPassword').valid && createForm.get('confirmPassword').touched && createForm.get('confirmPassword').errors['minlength']">At least 8 characters</mat-error>
+                        <mat-error *ngIf="!createForm.get('confirmPassword').valid && createForm.get('confirmPassword').touched && createForm.get('confirmPassword').errors['minlength']">Password must be at least 8 characters</mat-error>
                     </mat-form-field>
                 </div>
                 
@@ -164,7 +164,7 @@
                         <mat-label>State*</mat-label>
                         <input matInput id="stateBirth" placeholder="State" formControlName="stateBirth">
                         <mat-error *ngIf="!createForm.get('stateBirth').valid && createForm.get('stateBirth').touched && createForm.get('stateBirth').errors['required']">Please enter state</mat-error>
-                        <mat-error *ngIf="!createForm.get('stateBirth').valid && createForm.get('stateBirth').touched && createForm.get('stateBirth').errors['pattern']">Please valid state</mat-error>
+                        <mat-error *ngIf="!createForm.get('stateBirth').valid && createForm.get('stateBirth').touched && createForm.get('stateBirth').errors['pattern']">Please enter valid state</mat-error>
                     </mat-form-field>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                     <mat-form-field>
                         <mat-label>Apartment*</mat-label>
                         <input matInput matTooltip="Please enter apartment number or 0" id="apartment" placeholder="Apartment" formControlName="apartment">
-                        <mat-error *ngIf="!createForm.get('apartment').valid && createForm.get('apartment').touched && createForm.get('apartment').errors['pattern']">Please enter vaid apartment</mat-error>
+                        <mat-error *ngIf="!createForm.get('apartment').valid && createForm.get('apartment').touched && createForm.get('apartment').errors['pattern']">Please enter valid apartment</mat-error>
                         <mat-error *ngIf="!createForm.get('apartment').valid && createForm.get('apartment').touched && createForm.get('apartment').errors['required']">Please enter apartment</mat-error>
                     </mat-form-field>
                 </div>
@@ -227,7 +227,7 @@
                         <mat-label>State*</mat-label>
                         <input matInput id="state" placeholder="State" formControlName="state">
                         <mat-error *ngIf="!createForm.get('state').valid && createForm.get('state').touched && createForm.get('state').errors['required']">Please enter state</mat-error>
-                        <mat-error *ngIf="!createForm.get('state').valid && createForm.get('state').touched && createForm.get('state').errors['pattern']">Please valid state</mat-error>
+                        <mat-error *ngIf="!createForm.get('state').valid && createForm.get('state').touched && createForm.get('state').errors['pattern']">Please enter valid state</mat-error>
                     </mat-form-field>
                 </div>
         
