--- a/WebApplicationFrontend/src/app/search/prescription-simple-search/prescription-simple-search.component.html
+++ b/WebApplicationFrontend/src/app/search/prescription-simple-search/prescription-simple-search.component.html
@@ -1,8 +1,6 @@
-<div style="text-align: center;">
-    <h1>Prescription search</h1>
-</div>
+
 <form class="container" [formGroup]="prescriptionForm" (ngSubmit)="onSubmit()">
-    <div style="margin-left: 10px;">
+    <div style="margin-left: 10px;padding-top: 15px;">
         <a mat-raised-button routerLink="/reportSimpleSearch" target="_blank">Search reports</a>
     </div>
 
