--- a/WebApplicationFrontend/src/app/search/report-simple-search/report-simple-search.component.html
+++ b/WebApplicationFrontend/src/app/search/report-simple-search/report-simple-search.component.html
@@ -1,8 +1,6 @@
-<div style="text-align: center;">
-    <h1>Report search</h1>
-</div>
+
 <form class="container" [formGroup]="reportForm" (ngSubmit)="onSubmit()">
-    <div style="margin-left: 10px;">
+    <div style="padding-top: 15px;margin-left: 10px;">
         <a mat-raised-button routerLink="/prescriptionSimpleSearch" target="_blank">Search prescriptions</a>
     </div>
 
