--- a/WebApplicationFrontend/src/app/appointment/observe-appointment/observe-appointment.component.html
+++ b/WebApplicationFrontend/src/app/appointment/observe-appointment/observe-appointment.component.html
@@ -1,5 +1,24 @@
+<div class="mat-card-cvr">
 <div class = "container">
-    <div class="row1" *ngFor="let appointment of allCancelableAppointments">
+    <div [dataSource]="allCancelableAppointments" class="row1" *ngFor="let appointment of allCancelableAppointments">
+        <mat-card class="card">
+            <mat-card-header>
+                <mat-card-title>{{appointment.typeOfAppointment}}</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>        
+                <p class="content-paragraph">Doctor : <strong>{{appointment.name}} {{appointment.surname}}</strong></p>    
+                <p class="content-paragraph">Date : <strong>{{appointment.start | date: 'dd/MM/yyyy'}}</strong></p>    
+                <p class="content-paragraph">Time : <strong>{{appointment.start | date: 'HH:mm'}} - {{appointment.end | date: 'HH:mm'}}</strong></p>
+                <p class="content-paragraph">Status : <strong>Upcoming</strong></p>
+                <p class="content-paragraph">Room : <strong>{{appointment.roomType}}-{{appointment.roomNumber}}</strong></p>
+            </mat-card-content>
+            <mat-card-actions>
+                    <button mat-raised-button color="accent" class="button1" (click)="cancelAppointment(appointment.id, $event.target)">Cancel</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+
+    <div [dataSource]="surveyableAppointments" class="row2" *ngFor="let appointment of surveyableAppointments">
         <mat-card class="card">
             <mat-card-header>
                 <mat-card-title>{{appointment.typeOfAppointment}}</mat-card-title>
@@ -12,12 +31,12 @@
                 <p class="content-paragraph">Room : <strong>{{appointment.roomType}}-{{appointment.roomNumber}}</strong></p>
             </mat-card-content>
             <mat-card-actions>
-                    <button mat-raised-button class="button1" (click)="cancelAppointment(appointment.id, $event.target)">Cancel</button>
+                    <button mat-raised-button color="accent" class="button1" (click)="saveAppointment(appointment)" routerLink="/survey" target="_blank" >Survey</button>
             </mat-card-actions>
         </mat-card>
     </div>
 
-    <div class="row2" *ngFor="let appointment of surveyableAppointments">
+    <div [dataSource]="allOtherAppointments" class="row3" *ngFor="let appointment of allOtherAppointments">
         <mat-card class="card">
             <mat-card-header>
                 <mat-card-title>{{appointment.typeOfAppointment}}</mat-card-title>
@@ -26,31 +45,13 @@
                 <p class="content-paragraph">Doctor : <strong>{{appointment.name}} {{appointment.surname}}</strong></p>    
                 <p class="content-paragraph">Date : <strong>{{appointment.start | date: 'dd/MM/yyyy'}}</strong></p>    
                 <p class="content-paragraph">Time : <strong>{{appointment.start | date: 'HH:mm'}} - {{appointment.end | date: 'HH:mm'}}</strong></p>
-                <p class="content-paragraph">Status : <strong>Finished</strong></p>
-                <p class="content-paragraph">Room : <strong>{{appointment.roomType}}-{{appointment.roomNumber}}</strong></p>
-            </mat-card-content>
-            <mat-card-actions>
-                    <button mat-raised-button class="button1" (click)="saveAppointment(appointment)" routerLink="/survey" target="_blank" >Survey</button>
-            </mat-card-actions>
-        </mat-card>
-    </div>
-
-    <div class="row3" *ngFor="let appointment of allOtherAppointments">
-        <mat-card class="card">
-            <mat-card-header>
-                <mat-card-title>{{appointment.typeOfAppointment}}</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>        
-                <p class="content-paragraph">Doctor : <strong>{{appointment.name}} {{appointment.surname}}</strong></p>    
-                <p class="content-paragraph">Date : <strong>{{appointment.start | date: 'dd/MM/yyyy'}}</strong></p>    
-                <p class="content-paragraph">Time : <strong>{{appointment.start | date: 'HH:mm'}} - {{appointment.end | date: 'HH:mm'}}</strong></p>
-                <p class="content-paragraph" *ngIf="appointment.finished == true">Status : <strong>Finished</strong></p>
-                <p class="content-paragraph" *ngIf="appointment.finished == false">Status : <strong>Upcoming</strong></p>
-                <p class="content-paragraph" *ngIf="appointment.canceledByPatient == true">Status : <strong>Canceled</strong></p>
+                <p class="content-paragraph" *ngIf="appointment.finished && !appointment.canceledByPatient">Status : <strong>Finished</strong></p>
+                <p class="content-paragraph" *ngIf="!appointment.finished && !appointment.canceledByPatient">Status : <strong>Upcoming</strong></p>
+                <p class="content-paragraph" *ngIf="appointment.canceledByPatient ">Status : <strong>Canceled</strong></p>
                 <p class="content-paragraph">Room : <strong>{{appointment.roomType}}-{{appointment.roomNumber}}</strong></p>
             </mat-card-content>         
         </mat-card>
     </div>
     
 </div>    
-
+</div>
