--- a/GraphicEditor/View/MainPage.xaml
+++ b/GraphicEditor/View/MainPage.xaml
@@ -17,7 +17,13 @@
                 <DockPanel DockPanel.Dock="Top">
                     <Label DockPanel.Dock="Top" Content="Informations" FontFamily="Arial" FontWeight="Bold" FontSize="25" Foreground="White"/>
                     <Label DockPanel.Dock="Left" Content="Search:" FontFamily="Arial" FontWeight="Bold" FontSize="25" Foreground="White" Width="102"/>
-                    <TextBox Name="textBoxSearch" DockPanel.Dock="Right" Height="25" Margin="0,0,10,0" TextWrapping="Wrap" TextAlignment="Left" FontSize="15" FontWeight="SemiBold"  BorderBrush="#3A6180" KeyDown="EnterKey"/>
+                    <TextBox Name="textBoxSearch" DockPanel.Dock="Right" Height="25" Margin="0,0,10,0" TextWrapping="Wrap" TextAlignment="Left" FontSize="15" FontWeight="SemiBold"  BorderBrush="#3A6180" KeyDown="EnterKey">
+                        <TextBox.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="10"/>
+                            </Style>
+                        </TextBox.Resources>
+                    </TextBox>
                 </DockPanel>
                 <StackPanel DockPanel.Dock="Bottom" Margin="5,5,0,5" Orientation="Horizontal">
                     <Viewbox Height="22" HorizontalAlignment="Left" Margin="0,0,10,0">
@@ -34,8 +40,20 @@
 
             <DockPanel DockPanel.Dock="Bottom">
                 <DockPanel DockPanel.Dock="Bottom">
-                    <Button DockPanel.Dock="Left" Content="Exit" HorizontalAlignment="Left" Width="120" Height="30" Margin="5,5,5,5" FontWeight="Bold" Click="buttonExit" />
-                    <Button DockPanel.Dock="Right" Content="Appointment search" HorizontalAlignment="Right" Width="140" Height="30" Margin="5,5,5,5" FontWeight="Bold" Click="buttonAppointmentSearch" />
+                    <Button DockPanel.Dock="Left" Content="Exit" HorizontalAlignment="Left" Width="120" Height="30" Margin="5,5,5,5" Background="White" FontWeight="Bold" Click="buttonExit">
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="10"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                    <Button DockPanel.Dock="Right" Content="Appointment search" HorizontalAlignment="Right" Width="140" Height="30" Margin="5,5,5,5" Background="White" FontWeight="Bold" Click="buttonAppointmentSearch">
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="10"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
                 </DockPanel>
                 <local:Legend DockPanel.Dock="Top" x:Name="legenda"  VerticalAlignment="Center" HorizontalAlignment="Center"   Visibility="Visible" Height="300" Width="250"></local:Legend>
             </DockPanel>
