:bug: :white_check_mark: Fixing selenium so it can work in production

--- a/WebApplicationFrontend/src/app/app.component.html
+++ b/WebApplicationFrontend/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div>
     <button mat-raised-button routerLink="/feedback">Approved Feedback</button>
-    <button mat-raised-button routerLink="/allFeedback">All feedback</button>
+    <button name="allFedback" mat-raised-button routerLink="/allFeedback">All feedback</button>
     <button mat-raised-button routerLink="/prescriptionSearch">Prescription search</button>
     <button mat-raised-button routerLink="/reportSearch">Report search</button>
-    <button mat-raised-button routerLink="/createFeedback">Create feedback</button>
+    <button name="createFeedback" mat-raised-button routerLink="/createFeedback">Create feedback</button>
     <button mat-raised-button routerLink="/survey">Survey</button>
     <button mat-raised-button routerLink="/patientRegistration">Patient registration</button>
     <button mat-raised-button routerLink="/medicalRecord">Medical record</button>
