--- a/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
+++ b/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
@@ -55,9 +55,8 @@
                         <th> Relative </th>
                         <th> &nbsp; </th>
                         <th> &nbsp; </th>
-                        <th> Diagnoses </th>
-                        <tr>
-                            <td> {{ medicalRecord.familyIllnessHistoryRelatives }} </td>
+                        <tr *ngFor="let relative of medicalRecord.familyIllnessHistoryRelatives">
+                            <td> {{ relative }} </td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
                             <td> {{ medicalRecord.familyIllnessHistoryDiagnosis }} </td>
