--- a/WebApplicationFrontend/src/app/app.component.html
+++ b/WebApplicationFrontend/src/app/app.component.html
@@ -7,7 +7,7 @@
     <button mat-raised-button routerLink="/medicalRecord">Medical record</button>
     <button mat-raised-button routerLink="/prescriptionSimpleSearch">Prescription simple search</button>
     <button mat-raised-button routerLink="/reportSimpleSearch">Report simple search</button>
-  <!--  <button mat-raised-button routerLink="/blockMaliciousUsers">Block </button> -->
+    <button mat-raised-button routerLink="/blockMaliciousUsers">Block </button> 
     <button mat-raised-button routerLink="/observeAppointment">Observe </button>
     <button mat-raised-button routerLink="/scheduleAppointment">Schedule appointment</button>
     <button mat-raised-button routerLink="/appointmentRecommendation">Appointment recommendaion</button>  
