:iphone: Added navigation bar to frontend

--- a/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.html
+++ b/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.html
@@ -1,4 +1,22 @@
+<html>
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="all-feedback.component.css">
+    </head>>
+<body>
+
 <div class="container">
+    <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #3F51B5">
+        <h1><a class="naslov" href="" class="navbar-brand">HOME PAGE</a></h1>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a href="" class="nav-link">Početna</a></li>           
+                <li class="nav-item"><a href="" class="nav-link">Dodaj domaćina</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Odjavi se</a></li>
+            </ul>
+        </div>
+    </nav>
+    <br/><br/><br/><br/>
 <h1 name="feedbacks" class="header">All feedback</h1>
     <h2 name="all_feedback_len" class="container center-card">Currently there are: {{allFeedback.length}} feedback</h2>
     <div>
@@ -46,4 +64,6 @@
 
     
 </div>
+</body>
+</html>
 
