--- a/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.html
+++ b/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.html
@@ -1,3 +1,4 @@
+<app-navigation-bar></app-navigation-bar>
 <div class="container">
     <div class="row" *ngFor="let feedback of approvedFeedback" class="container center-card">
                     <mat-card>
