:lipstick: Redesigned navbar and added background picture

--- a/WebApplicationFrontend/src/app/navigation-bar/navigation-bar.component.html
+++ b/WebApplicationFrontend/src/app/navigation-bar/navigation-bar.component.html
@@ -7,12 +7,12 @@
 
         <div class="container">
             <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #3F51B5">
-                <h1><a class="naslov" href="" class="navbar-brand">HOME PAGE</a></h1>
+                <h1><a class="naslov" routerLink="/allFeedback" class="navbar-brand">MEDBAY TECH</a></h1>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a href="" class="nav-link">Početna</a></li>           
-                        <li class="nav-item"><a href="" class="nav-link">Dodaj domaćina</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Odjavi se</a></li>
+                        <li class="nav-item"><a routerLink="/allFeedback"  class="nav-link">All feedbacks</a></li>           
+                        <li class="nav-item"><a routerLink="/blockMaliciousUsers"  class="nav-link">Malicious pacients</a></li>
+                        <li class="nav-item"><a routerLink="" class="nav-link">Log out</a></li>
                     </ul>
                 </div>
             </nav>
