--- a/WebApplicationFrontend/src/app/survey/do-survey/survey/survey/survey.component.css
+++ b/WebApplicationFrontend/src/app/survey/do-survey/survey/survey/survey.component.css
@@ -1,8 +1,12 @@
 .survey{
     border: 5px outset grey;
     text-align: center;
+    width: 75%;
 }
-
+mat-card{
+    
+    justify-content: center;
+}
 .example-radio-group{
     text-align: center;
    
