--- a/WebApplicationFrontend/src/app/survey/do-survey/survey/survey/survey.component.html
+++ b/WebApplicationFrontend/src/app/survey/do-survey/survey/survey/survey.component.html
@@ -1,4 +1,6 @@
+
 <div class = "survey">
+    <mat-card>
         <div class = "doctor"  class="title-color">
             <label id="Doctor"><b>Doctor</b></label>       
         </div>
@@ -89,5 +91,6 @@
         </div>  
         
         <button mat-raised-button id="button" color="accent" (click)="onSubmit()" >Post</button>
-</div>
+    </mat-card>
+    </div>
 
