--- a/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.css
+++ b/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.css
@@ -17,8 +17,19 @@ a.naslov:hover    {
     padding-bottom: 1em;*/
 }
 
+html{
+    background-image: linear-gradient(69deg, rgba(63,81,181,1) 5%, rgba(197,202,233,1) 100%);
+    min-height: 100%;
+    margin: 0;
+
+}
 body{
-    background-image: linear-gradient(69deg, rgba(63,81,181,1) 5%, rgba(197,202,233,1) 100%)
+    background-image: linear-gradient(69deg, rgba(63,81,181,1) 5%, rgba(197,202,233,1) 100%);
+    min-height: 100%;
+    margin: 0;
+    background-attachment: fixed;
+    overflow: scroll;
+
 }
 
 
