--- a/WebApplicationFrontend/src/app/navigation-bar/navigation-bar.component.css
+++ b/WebApplicationFrontend/src/app/navigation-bar/navigation-bar.component.css
@@ -2,6 +2,7 @@
     /*font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;*/
     font-size: larger;
     color: white;
+    padding-top: 5px;
 }
 
 a.naslov:hover    {
