--- a/WebApplicationFrontend/src/styles.css
+++ b/WebApplicationFrontend/src/styles.css
@@ -2,4 +2,11 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {  margin: 0; 
+        font-family: Roboto, "Helvetica Neue", sans-serif; 
+        background-image: linear-gradient(0deg, rgba(63,81,181,1) 5%, rgba(197,202,233,1) 100%);
+        min-height: 100%;
+        margin: 0;
+        background-attachment: fixed;
+
+}
