--- a/WebApplicationFrontend/src/app/navigation-bar/navigation-bar.component.html
+++ b/WebApplicationFrontend/src/app/navigation-bar/navigation-bar.component.html
@@ -2,17 +2,26 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="navigation-bar.component.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>       
     </head>>
     <body>
 
         <div class="container">
             <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #3F51B5">
-                <h1><a class="naslov" routerLink="/allFeedback" class="navbar-brand">MEDBAY TECH</a></h1>
+                <h1><a class="naslov" routerLink="/home" class="navbar-brand">MEDBAY TECH</a></h1>  
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a routerLink="/allFeedback"  class="nav-link">All feedbacks</a></li>           
-                        <li class="nav-item"><a routerLink="/blockMaliciousUsers"  class="nav-link">Malicious pacients</a></li>
-                        <li class="nav-item"><a routerLink="" class="nav-link">Log out</a></li>
+                        <li class="nav-item"><a routerLink="/medicalRecord"  class="nav-link">Medical record</a></li>       
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown">My account</a>
+                            <div class="dropdown-menu">
+                                <a routerLink="/medicalRecord" class="dropdown-item">Medical record</a>
+                                <div class="dropdown-divider"></div>
+                                <a href="#"class="dropdown-item">Log out</a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </nav>
