:iphone: Added temporary picture for ads

--- a/WebApplicationFrontend/src/app/home-page/home-page.component.html
+++ b/WebApplicationFrontend/src/app/home-page/home-page.component.html
@@ -5,7 +5,22 @@
     <div>
         <carousel loop=true>
             <div class="carousel-cell">
-                <img src="C:\Users\kaise\Pictures\globe.jpg">
+                <a>
+                    <img src="https://dcassetcdn.com/design_img/3594580/46294/46294_19908671_3594580_45125608_image.jpg"
+                    width="150" height="70">
+                 </a>
+            </div>
+            <div class="carousel-cell">
+                <a>
+                    <img src="https://dcassetcdn.com/design_img/3594580/46294/46294_19908671_3594580_45125608_image.jpg"
+                    width="150" height="70">
+                 </a>
+            </div>
+            <div class="carousel-cell">
+                <a>
+                    <img src="https://dcassetcdn.com/design_img/3594580/46294/46294_19908671_3594580_45125608_image.jpg"
+                    width="150" height="70">
+                 </a>
             </div>
         </carousel>
     </div>
